# forpy

./: .clang-format  .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.MD  appveyor.yml  setup.py
bindings/python/: CMakeLists.txt  conversion.h  data_providers.cpp  deciders.cpp  features.cpp  forest.cpp  forpy.cpp  forpy_exporters.h  gains.cpp  global.cpp  impurities.cpp  leafs.cpp  macros.h  regressors.cpp  threshold_optimizers.cpp  tree.cpp  types.cpp  util.cpp
build_support/appveyor/: appveyor.yml
doc/: CMakeLists.txt  Doxyfile.in  header.html  stylesheet.css
doc/sphinx/: conf.py
docs/: Doxyfile  footer.html
docs/sphinx/: conf.py
include/: CMakeLists.txt
include/forpy/: forest.h  forpy.h  global.h  tree.h  types.h  version.h  version.h.in
include/forpy/data_providers/: data_providers.h  fastdprov.h  idataprovider.h  plaindataprovider.h  sample.h
include/forpy/deciders/: deciders.h  fastdecider.h  idecider.h  thresholddecider.h
include/forpy/features/: alignedsurfacecalculator.h  featcalcparams.h  featureproposer.h  features.h  featureselector.h  ifeatureproposer.h  ifeatureselector.h  isurfacecalculator.h
include/forpy/gains/: entropygain.h  gains.h  igaincalculator.h
include/forpy/impurities/: classificationerror.h  ientropyfunction.h  impurities.h  inducedentropy.h  renyientropy.h  shannonentropy.h  tsallisentropy.h
include/forpy/leafs/: classificationleaf.h  ileaf.h  leafs.h  regressionleaf.h
include/forpy/threshold_optimizers/: classification_opt.h  classificationthresholdoptimizer.h  fastclassopt.h  feature_value_selection.h  ithresholdoptimizer.h  ithreshopt.h  regression_opt.h  regressionthresholdoptimizer.h  threshold_optimizers.h
include/forpy/util/: argsort.h  checks.h  desk.h  exponentials.h  hash.h  macros.h  sampling.h  storage.h  variant.h
include/forpy/util/regression/: constantregressor.h  iregressor.h  linearregressor.h  regression.h
include/forpy/util/serialization/: basics.h  eigen.h  serialization.h  variant.h
include/forpy/util/serialization/stl/: atomic.h  random.h
include/forpy/util/threading/: ctpl.h
src/: CMakeLists.txt
src/forpy/: forest.cpp  tree.cpp
src/forpy/data_providers/: fastdprov.cpp  idataprovider.cpp  plaindataprovider.cpp
src/forpy/deciders/: fastdecider.cpp  idecider.cpp  thresholddecider.cpp
src/forpy/features/: alignedsurfacecalculator.cpp  featcalcparams.cpp  featureproposer.cpp  featureselector.cpp  ifeatureproposer.cpp  ifeatureselector.cpp  isurfacecalculator.cpp
src/forpy/gains/: entropygain.cpp
src/forpy/impurities/: classificationerror.cpp  ientropyfunction.cpp  inducedentropy.cpp  renyientropy.cpp  shannonentropy.cpp  tsallisentropy.cpp
src/forpy/leafs/: classificationleaf.cpp  ileaf.cpp  regressionleaf.cpp
src/forpy/threshold_optimizers/: classification_opt.cpp  classificationthresholdoptimizer.cpp  fastclassopt.cpp  ithresholdoptimizer.cpp  regression_opt.cpp  regressionthresholdoptimizer.cpp
src/forpy/util/regression/: constantregressor.cpp  iregressor.cpp  linearregressor.cpp
test/: CMakeLists.txt
test/cpp/: gains.cpp  impurities.cpp  setup.h  timeit.h  util.cpp
test/python/: benchmark_prediction.py  benchmark_quality.py  data_providers.py  deciders.py  forest.py  iris.py  leafs.py  pickle_.py  plot_speed.py  regression.py  regression_example.py  serialization.py  skinterface.py  threshopt.py  tree.py  utils.py
